--- a/public/assets/js/ueditor/dialogs/image/image.html
+++ b/public/assets/js/ueditor/dialogs/image/image.html
@@ -13,8 +13,8 @@
             <div id="tabHeads" class="tabhead">
                 <span tabSrc="remote"  class="focus"><var id="lang_tab_remote"></var></span>
                 <span tabSrc="local"><var id="lang_tab_local"></var></span>
-                <span tabSrc="imgManager"><var id="lang_tab_imgManager"></var></span>
-                <span tabSrc="imgSearch"><var id="lang_tab_imgSearch"></var></span>
+                <!--<span tabSrc="imgManager"><var id="lang_tab_imgManager"></var></span>-->
+             <!--   <span tabSrc="imgSearch"><var id="lang_tab_imgSearch"></var></span>-->
             </div>
             <div id="tabBodys" class="tabbody">
                 <div id="remote" class="panel">
@@ -63,16 +63,16 @@
                         </select>
                     </div>
                 </div>
-                <div id="imgManager" class="panel">
+                <!--<div id="imgManager" class="panel">
                     <div id="imageList"><var id="lang_imgLoading"></var></div>
-                </div>
-                <div id="imgSearch" class="panel">
+                </div>-->
+            <!--    <div id="imgSearch" class="panel">
                     <table style="margin-top: 5px;">
                         <tr>
                             <td width="200"><input id="imgSearchTxt" type="text" /></td>
                             <td width="65">
                                 <select id="imgType">
-                                    <!--具体内容值将由国际化组件动态填充-->
+                                    &lt;!&ndash;具体内容值将由国际化组件动态填充&ndash;&gt;
                                     <option value="&s=4&z=0"></option>
                                     <option value="&s=1&z=19"></option>
                                     <option value="&s=2&z=0"></option>
@@ -84,7 +84,7 @@
                         </tr>
                     </table>
                     <div id="searchList"></div>
-                </div>
+                </div>-->
                 <iframe id="maskIframe" src="about:blank" scrolling="no" frameborder="no"></iframe>
             </div>
         </div>
