--- a/public/assets/js/ueditor/1.2.6.0/dialogs/image/image.html
+++ b/public/assets/js/ueditor/1.2.6.0/dialogs/image/image.html
@@ -13,7 +13,6 @@
             <div id="tabHeads" class="tabhead">
                 <span tabSrc="remote"  class="focus"><var id="lang_tab_remote"></var></span>
                 <span tabSrc="local"><var id="lang_tab_local"></var></span>
-                <span tabSrc="imgManager"><var id="lang_tab_imgManager"></var></span>
 
             </div>
             <div id="tabBodys" class="tabbody">
@@ -43,10 +42,7 @@
                             <td class="label"><label for="title"><var id="lang_input_title"></var></label></td>
                             <td><input type="text" id="title"/></td>
                         </tr>
-                        <tr>
-                            <td class="label"><var id="lang_input_remoteAlign"></var></td>
-                            <td id="remoteFloat"></td>
-                        </tr>
+
                     </table>
 
                     <div id="preview"></div>
@@ -54,18 +50,14 @@
                 </div>
                 <div id="local" class="panel">
                     <div id="flashContainer"></div>
-                    <div><div id="upload" style="display: none" ></div><div id="duiqi"></div><div id="localFloat"></div></div>
+                    <div>
+                        <div id="upload" style="display: none" ></div>
 
-                    <div class="saveDir">
-                        <var id="lang_savePath" ></var>：<select id="savePath">
-                            <option value="1">upload</option>
-                            <option value="2">upload1</option>
-                        </select>
                     </div>
+
+
                 </div>
-                <div id="imgManager" class="panel">
-                    <div id="imageList"><var id="lang_imgLoading"></var></div>
-                </div>
+
 
                 <iframe id="maskIframe" src="about:blank" scrolling="no" frameborder="no"></iframe>
             </div>
@@ -171,13 +163,9 @@
                  * 参数为json对象{"key1":"value1","key2":"value2"}，其中key即为向后台post提交的name，value即为值。
                  * 其中有一个特殊的保留key值为action，若设置，可以更改本次提交的处理地址
                  */
-                var postParams = {
-                    "dir":baidu.g("savePath").value
-                };
-                imageUploader.setPostParams(postParams);
                 flashObj.upload();
                 this.style.display = "none";
-                $G("savePath").parentNode.style.display = "none";
+
             };
 
         });
